--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,8 @@
 services:
   - type: web
-    name: guerras-clash
-    env: docker
-    plan: free
-    dockerfilePath: Dockerfile
-    autoDeploy: true
-    envVars:
-      - key: PORT
-        value: 10000
+    name: guerras-coc-app
+    env: python
+    buildCommand: |
+      pip install -r requirements.txt
+      playwright install chromium
+    startCommand: python main.py
